[package]
name = "harbor_rs"
version = "0.1.0"
edition = "2021"
description = "Harbor SDK for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
chrono = "0.4.19"
base64 = "0.13.0"
serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }
